Solved horizontal scroll issue
@pilz Can you push this change live?

--- a/Prototype/_sass/components/_global-nav.scss
+++ b/Prototype/_sass/components/_global-nav.scss
@@ -1,6 +1,8 @@
 .global-nav {
 	background: rgba(0,0,0,0.4);
 	position: relative;
+	// Override pat-bumper left value:
+	left: 0 !important;
 	z-index: 5;
 	text-align: center;
 	font-size: 1.3rem;
